kubernetes/talos/deploy/seerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seerr
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: seerr
    release: seerr
  type: ClusterIP
