kubernetes/talos/deploy/seerr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seerr
spec:
  ingressClassName: external
  rules:
  - host: jellyseerr.vandeneede.org
    http:
      paths:
      - backend:
          service:
            name: seerr
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
